[TabRestore] Fix from_last_session for tabs reopened from last session.

This CL fixes the from_last_session field for tabs reopened from last session.

Bug: 746745
Change-Id: I25965e78415a516343d5796c9255e8976d08db9d